# VWA-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  LICENSE.md  README.md  linking.md  testfile.bc  testfile.pp  testfile2.bc  tmp.cpp
AST/: CMakeLists.txt
AST/include/: Node.hpp  Parser.hpp
AST/src/: Parser.cpp
BytecodeTools/: CMakeLists.txt
BytecodeTools/include/: InstructionNames.hpp
BytecodeTools/src/: Assembler.cpp  Disassembler.cpp
common/: CMakeLists.txt
common/include/: Log.hpp
common/src/: Log.cpp
compiler/: CMakeLists.txt  main.cpp
compiler/include/: Compiler.hpp
compiler/privateInclude/: GenerateByteCode.hpp  ProcessInput.hpp
compiler/src/: Compiler.cpp  GenerateByteCode.cpp  ProcessInput.cpp
doc/: Grammar.md  Idea  Preprocessor
examples/: fibonacci.vwa  fizzbuzz.vwa  hello_world.vwa  loops.vwa  structs.vwa
lexer/: CMakeLists.txt
lexer/include/: Lexer.hpp
lexer/src/: Lexer.cpp
lexer/test/: CMakeLists.txt
lexer/test/src/: TestBasicLexing.cpp
linker/: CMakeLists.txt  Serialize.md
linker/include/: Linker.hpp
linker/src/: Linker.cpp
modules/: CMakeLists.txt  GenerateBoilerplate.cpp  Samplein  idea.text  old  sampleout.cpp  template.hpp
modules/core/: CMakeLists.txt  core.cpp  core.hpp  core.template
modules/data/: CMakeLists.txt  data.cpp  data.template
modules/std/: CMakeLists.txt  Main.cpp
preprocessor/: CMakeLists.txt  CMakelists.txt  idea
preprocessor/include/: Preprocessor.hpp
preprocessor/src/: Preprocessor.cpp
vm/: CMakeLists.txt
vm/include/: Bytecode.hpp  VM.hpp
vm/src/: VM.cpp
